# PrefectFlow-Whitebox

./: .commit_msg.tmp  .env.example  .gitignore  AGENTS.md  PUSH-TO-GITHUB.md  README.md  decisions.md  mkdocs.yml  plan.md  progress.md  prompts.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
baselines/: README.md
docs/: index.en.md  index.zh.md  lineage.en.md  lineage.zh.md
runs/: .gitkeep
sheets/: .gitkeep  MRC_Adv_Info.yaml  MRC_Advance_Check.yaml  MRC_General_Check.yaml  MRC_ServiceFee_Check.yaml  MRC_Summary_check.yaml  placeholder_hello.yaml
snapshots/: .gitkeep
test_reports/: README.md  cleanup-c6_2026-05-17.md  stage1-carrington_2026-05-17.md  stage1-mrc-baseline_2026-05-17.md  stage1-mrc-business-purpose_2026-05-17.md  stage1-mrc-dataflow-v2-refine_2026-05-17.md  stage1-mrc-dataflow_2026-05-17.md  stage1-mrc-fields-v2-refine_2026-05-17.md  stage1-mrc-fields_2026-05-17.md  stage1-mrc-rawdata_2026-05-17.md  stage1-mrc-rules_2026-05-17.md  stage1-mrc-sheets_2026-05-17.md  stage1-mrc-toc_2026-05-17.md  stage1-mrc-xref-readability_2026-05-17.md  stage1-overall-flow-v1.1-diagrams_2026-05-16.md  stage1-overall-flow_2026-05-16.md  stage1-pending-registry_2026-05-17.md  stage1-shellpoint_2026-05-17.md  stage1-toc_2026-05-16.md  stage2-mrc-dev-plan_2026-05-18.md  stage2-mrc-srs_2026-05-17.md
tests/: test_infra_selftest.py  test_registry_servicers.py  test_smoke.py
tools/: __init__.py  _freeze_snapshot_phase1.py  acceptance_gate.py  autodoc.py  build_docs.py  build_lineage.py  clean_business_purpose_label.py  cleanup_xrefs.py  cleanup_xrefs_meta.py  (+13 more)
(+373 files in other folders)
