[project]
name = "prefectflow-whitebox"
version = "0.0.1"
description = "Whitebox re-implementation of PrefectFlow remit_validation pipeline, with column-level auto-documented logic."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "duckdb>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "sqlglot>=25.0",
    "jinja2>=3.1",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-static-i18n>=1.2",
    "pymdown-extensions>=10.7",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whitebox"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["whitebox", "tools"]
exclude = ["snapshots", "docs", "site"]

[[tool.mypy.overrides]]
module = ["openpyxl.*", "pandas.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
